# tan

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  codecov.yml  compile-and-test.sh  compile.sh  cppcheck.sh  cppcheck.txt  sonar-project.properties  syntax.md
dep/: .gitignore  CMakeLists.txt
docs/: CMakeLists.txt  Doxygen.in  array.md  index.html  lld-flags.md
docs/html/: analysis__action_8h_source.html  analyzer_8cpp_source.html  analyzer_8h_source.html  annotated.html  annotated_dup.js  ast__ampersand_8cpp_source.html  ast__ampersand_8h_source.html  ast__arg__decl_8cpp_source.html  ast__arg__decl_8h_source.html  ast__arithmetic_8cpp_source.html  ast__arithmetic_8h_source.html  ast__array_8cpp_source.html  ast__array_8h_source.html  ast__assignment_8cpp_source.html  ast__assignment_8h_source.html  ast__base_8cpp_source.html  ast__base_8h_source.html  ast__builder_8cpp_source.html  ast__builder_8h_source.html  ast__cast_8cpp_source.html  ast__cast_8h_source.html  ast__char__literal_8cpp_source.html  ast__char__literal_8h_source.html  ast__compare_8cpp_source.html  ast__compare_8h_source.html  ast__context_8cpp_source.html  ast__context_8h_source.html  ast__control__flow_8cpp_source.html  ast__control__flow_8h_source.html  ast__func_8cpp_source.html  ast__func_8h_source.html  ast__identifier_8cpp_source.html  ast__identifier_8h_source.html  ast__import_8cpp_source.html  ast__import_8h_source.html  ast__infix__binary__op_8cpp_source.html  ast__infix__binary__op_8h_source.html  ast__literal_8cpp_source.html  ast__literal_8h_source.html  ast__loop_8cpp_source.html  (+1216 more)
examples/: CMakeLists.txt  meta.tan
examples/function-call/: Makefile  main.tan
examples/link-against-c/: Makefile  main.tan  print_shit.c  print_shit.h
examples/read-cmd-args-with-c/: Makefile  build-and-run.sh  main.tan  make.sh  print_args.h
examples/read_cmd_args_with_c/: .gitignore  CMakeLists.txt  main.tan  print_args.c  print_args.h
runtime/: CMakeLists.txt  assert.tan  build_system.tan  debug.tan  main.cpp  math.tan  print.tan  stack_trace.cpp  stack_trace.h  stdlib.tan
src/: CMakeLists.txt  common.cpp  common.h  llvm_include.h  scope.h  type_system.cpp  type_system.h
src/analysis/: CMakeLists.txt  PACKAGES.md  TYPE_CASTING.md  analysis.cpp  analysis.h  analyze_binary_op.cpp  analyze_func.cpp  analyze_import.cpp  analyze_intrinsics.cpp  analyze_literal.cpp  analyze_member_access.cpp  analyze_struct.cpp  analyzer.cpp  analyzer.h  analyzer_impl.cpp  analyzer_impl.h  ast_helper.cpp  ast_helper.h  dependency_graph.cpp  implicit_cast.cpp  implicit_cast.hpp  organize_packages.cpp  package.cpp  register_declarations.cpp  register_top_level_declarations.cpp  scan_imports.cpp  type_check.cpp  type_checker.cpp  type_precheck.cpp  type_system.cpp  type_system.h
src/ast/: CMakeLists.txt  README.md  ast_ampersand.cpp  ast_ampersand.h  ast_arg_decl.cpp  ast_arg_decl.h  ast_arithmetic.cpp  ast_arithmetic.h  ast_array.cpp  ast_array.h  ast_assignment.cpp  ast_assignment.h  ast_base.cpp  ast_base.h  ast_builder.cpp  ast_builder.h  ast_cast.cpp  ast_cast.h  ast_char_literal.cpp  ast_char_literal.h  ast_compare.cpp  ast_compare.h  ast_context.cpp  ast_context.h  ast_control_flow.cpp  ast_control_flow.h  ast_dot.cpp  ast_dot.h  ast_enum.cpp  ast_enum.h  ast_expr.cpp  ast_expr.h  ast_func.cpp  ast_func.h  ast_identifier.cpp  ast_identifier.h  ast_import.cpp  ast_import.h  ast_infix_binary_op.cpp  ast_infix_binary_op.h  (+78 more)
src/backtrace/: CMakeLists.txt  tan_backtrace.cpp  tan_backtrace.h
src/base/: CMakeLists.txt  container.h  error.cpp  error.h  filesystem.h  hashed_string.hpp  macro.h  utils.h
src/cli/: App.h  App.hpp  CMakeLists.txt  cli_main.cpp  tan-interpreter.cpp  tan-jit.cpp  tan-ld.cpp  tanc.cpp
src/codegen/: CMakeLists.txt  LLVM_NOTES.md  code_generator.cpp  code_generator.h  code_generator_impl.cpp  code_generator_impl.h  codegen.cpp  codegen.h  codegen_control_flow.cpp  codegen_func.cpp  codegen_helper.cpp  codegen_helper.h  codegen_member_access.cpp
src/common/: CMakeLists.txt  ast_visitor.cpp  compilation_unit.cpp  compiler_action.cpp  dependency_graph.cpp
src/compiler/: CMakeLists.txt  ast_context.cpp  compiler.cpp  compiler_session.cpp  function_table.cpp  function_table.h  interpreter.cpp  interpreter.h  intrinsic.cpp  jit.cpp  jit.h  libtanc.cpp  stack_trace.cpp  stack_trace.h
src/driver/: CMakeLists.txt  driver.cpp
src/lexer/: CMakeLists.txt  lexdef.cpp  lexer.cpp  lexer_internal.h  reader.cpp  source_file.cpp  token.cpp
src/lib/: clang-cc1.cpp  clang-cc1as.cpp  clang-frontend.cpp  libtanc.cpp  libtanc.h  llvm-ar.cpp  llvm-ar.h  misc.h
src/linker/: CMakeLists.txt  linker.cpp
src/llvm_api/: CMakeLists.txt  cc1_main.cpp  cc1as_main.cpp  cc1gen_reproducer_main.cpp  clang_driver.cpp  clang_frontend.cpp  llvm_ar.cpp
src/parser/: CMakeLists.txt  builtin_type.cpp  decl.cpp  dot.cpp  expr.cpp  function.cpp  grammar_check.cpp  grammar_check.h  member_access.cpp  parse_control_flow.cpp  parse_enum.cpp  parse_expr.cpp  parse_func.cpp  parse_keyword.cpp  parse_literal.cpp  parse_member_access.cpp  parse_stmt.cpp  parse_struct.cpp  parse_ty.cpp  parse_variable.cpp  parsed_module.cpp  parsedef.cpp  parser.cpp  parser.hpp  parser_impl.cpp  parser_impl.h  parser_internal.h  program.cpp  stmt.cpp  token_check.cpp  token_check.h  ty.cpp  typename.cpp
src/reader/: reader.cpp
src/source_file/: CMakeLists.txt  source_file.cpp  source_manager.cpp  tokenized_source_file.cpp
src/tan/: CMakeLists.txt  tan.cpp
src/tanc/: tanc.hpp
src/test/: CMakeLists.txt  codegen_test.h  compiler_test.h  lexer_test.cpp  lexer_test.h  parser_test.cpp  parser_test.h  reader_test.h  tanc_tests.cpp  test.cpp  test_program.tan
test/: CMakeLists.txt  lexer_test.h  parser_test.h  source_file_test.h  tanc_tests.cpp  unit_test.cpp
test/test_exec/: CMakeLists.txt  arithmetic.tan  array.tan  assertion.tan  assignment.tan  bits.tan  boolean.tan  enum.tan  fail_recursive_type_reference.tan  function.tan  (+12 more)
(+419 files in other folders)
